# pym-particles

./: .gitignore  README.md  arithmetic_coder.py  compress.py  compress1.py  compressor.py  data_processing.py  decompressor.py  journal.md  main.py  pym_lstm.py  pym_transformer.py  pyproject.toml  tokenizer.py  train.py
docs/: architecture.md  experiments.md
